# simplefin-archiver

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-worker  alembic.ini  compose.yaml  compose.yml  docker-compose.yml  entrypoint.sh  prefect.yaml  pyproject.toml  simplefin_key
.github/workflows/: docker-build.yml  publish.yml  publish_pypi.yml
alembic/: env.py
alembic/versions/: 2847c77b3d6b_init.py  7654534a85bd_add_balance_raw_json.py  b40ca8183247_add_querylog.py  e550ae45ff11_init.py
flows/: hello_world.py  serve.py  update_accounts.py
src/simplefin_archiver/: __init__.py  api.py  cli.py  db.py  models.py  schemas.py  simplefin.py
src/simplefin_archiver/api/: api.py
src/simplefin_archiver/venmo/: __init__.py  imap.py  parse_email.py  venmo_txs.py
src/tassilo_simplefin/: __init__.py  cli.py  db.py  models.py  simplefin.py
