[project]
name = "tassilo-simplefin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tassilo Selover-Stephan", email = "tassilo@selover-stephan.com" }
]
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.5.1",
    "keyring>=25.7.0",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
